# CEIA-AMIA-TP1

./: .gitignore  AMIA_2025_TP1.ipynb  Aux_graficos.ipynb  README.md  pyproject.toml
