[tool.poetry]
name = "CEIA-AMIA-TP1"
version = "0.1.0"
description = "TP 1: LDA/QDA y optimización matemática de modelos"
authors = ["Martin Brocca <martinbrocca@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.14"  # LTS stability, update to 3.13 if desired
numpy = ">1.27.0"
pandas = "^2.2.3"
scipy = "^1.14.0"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
scikit-learn = "^1.6.0"
pyarrow = ">17.0.0"
jupyterlab = "^4.3.0"  # Includes Jupyter Notebook functionality
notebook = "^7.3.3"
memory_profiler = "^0.61.0"
tabulate = "^0.9.0"
ipykernel = "^6.29.5"
tqdm = "^4.67.1"
ipywidgets = "^8.1.6"


[tool.poetry.group.dev.dependencies]
nbstripout = "^0.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"